# riscv-blinky

./: .gitignore  Blinky.lpf  Makefile  build.sbt  openocd.cfg
firmware/: Cargo.toml  Makefile  Makefile.toml  blink.out  blink.s  memory.x
firmware/src/: main.rs
src/main/scala/blinky/: Blinky.scala
